Version 3.5.x (2012-07-xx)
	Fixed bug where resizing an image to less that 0x0 pixels would display the ghost image at an incorrect position.
	Fixed bug where the remove format button would produce extra paragraphs on WebKit if all of the contents was selected.
	Fixed issue where edge resize handles on images of wouldn't scale it with the same aspect ratio.
Version 3.5.5 (2012-07-19)
	Added full resize support for images and tables on WebKit/Opera. It now behaves just like Gecko.
	Added automatic embed support for Vimeo, Stream.cz and Google Maps in media plugin. Patch contributed by Jakub Matas.
	Fixed bug where the lists plugin wouldn't properly remove all li elements when toggling selected items of. Patched by Taku AMANO.
	Fixed bug where the lists plugin would remove the entire list if you pressed deleted at the beginning of the first element. Patched by Taku AMANO.
	Fixed bug where the ordered/unordered list buttons could both be enabled if you nested lists. Patch contributed by Craig Petchell.
	Fixed bug where shift+enter wouldn't produce a BR in a LI when having forced_root_blocks set to false.
	Fixed bug where scrollbars aren't visible in fullscreen when window is resized.
	Fixed bug with updating the border size using the advimage dialog on IE 9.
	Fixed bug where the selection of inner elements on IE 8 in contentEditable mode would select the whole parent element.
	Fixed bug where the enter key would produce an empty anchor if you pressed it at the space after a link on IE.
	Fixed bug where autolink plugin would produce an exception for specific html see bug #5365
	Fixed so the formatChanged function takes an optional "similar" parameter to use while matching the format.
Version 3.5.4.1 (2012-06-24)
	Fixed issue with Shift+A selecting all contents on Chrome.
Version 3.5.4 (2012-06-21)
	Added missing mouse events to HTML5 schema. Some events needs to be manually defined though since the spec is huge.